Repurchase fixes for Dreams
Added repurchase settings for Dreams of the First Age charms.

--- a/Box_DotFA/resources/data/language/dotfa/Charm_Descriptions_boxDotFA.properties
+++ b/Box_DotFA/resources/data/language/dotfa/Charm_Descriptions_boxDotFA.properties
@@ -232,8 +232,7 @@ Solar.ScienceOfMutation.Description=The Solar can grant or remove mutations via 
 Solar.MindSoothingAnodyne.Description=The Solar can remove derangements and prevent them from recurring.
 Solar.EclipsingTheSun.Description=When using a Holy Charm, the Solar can treat any target as a creature of darkness.
 Solar.MagicShatteringStrike.Description=This Charm supplements an attack; it shatters sorcerous, necromantic, or Sorcery-Keyword effects.
-Solar.PowerFromDarkness7.Description=The Solar can learn any Charm an Eclipse can by tearing it from the fabric of existence.
-Solar.PowerFromDarkness10.Description=A repurchase of this Charm reduces the committment cost.
+Solar.PowerFromDarkness.Description=The Solar can learn any Charm an Eclipse can by tearing it from the fabric of existence. A repurchase of this Charm reduces the committment cost.
 Solar.TheTimeIsNow.Description=This Charm enhances the Solar's demon-summoning spells.
 
 # Solar - Zenith
