--- a/Box_DotFA/resources/data/language/dotfa/Charms_boxDotFA.properties
+++ b/Box_DotFA/resources/data/language/dotfa/Charms_boxDotFA.properties
@@ -244,8 +244,7 @@ Solar.ScienceOfMutation=Science of Mutation
 Solar.MindSoothingAnodyne=Mind-Soothing Anodyne
 Solar.EclipsingTheSun=Eclipsing The Sun
 Solar.MagicShatteringStrike=Magic-Shattering Strike
-Solar.PowerFromDarkness7=Power from Darkness
-Solar.PowerFromDarkness10=Power from Darkness
+Solar.PowerFromDarkness=Power from Darkness
 Solar.TheTimeIsNow=The Time Is Now
 
 # Solar - Zenith
