--- a/Box_DotFA/resources/data/language/dotfa/Pages_boxDotFA.properties
+++ b/Box_DotFA/resources/data/language/dotfa/Pages_boxDotFA.properties
@@ -331,8 +331,7 @@ ScrollOfErrata.Solar.ScienceOfMutation.Page=125
 #ScrollErrata.MindSoothingAnodyne.Page=
 LordsOfCreation.Solar.EclipsingTheSun.Page=
 LordsOfCreation.Solar.MagicShatteringStrike.Page=63
-LordsOfCreation.Solar.PowerFromDarkness7.Page=63
-LordsOfCreation.Solar.PowerFromDarkness10.Page=63
+LordsOfCreation.Solar.PowerFromDarkness.Page=63
 #ScrollErrata.Solar.TheTimeIsNow.Page=
 
 # Solar - Zenith
